# django-gunicorn-nginx-docker

./: .gitignore  Dockerfile  LICENSE.txt  README.md  django.env  django.env.example  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: Dockerfile  requirements.txt  restart.sh
app/blog/: admin.py  models.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py
app/blog/static/css/: fontAwesome.css  tooplate-style.css
app/blog/static/js/: main.js  plugins.js
app/blog/templates/: base.html  index.html  portfolio-page.html
app/mysite/: settings.py  urls.py  wsgi.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
